--- a/index.html
+++ b/index.html
@@ -370,6 +370,22 @@
         </div>
 
 
+        <!-- our companies start here  -->
+
+        <div class="my-5">
+            <h1 class="text-center">Trusted by over 800+ companies</h1>
+            
+            <div class="d-none d-lg-flex my-4 justify-content-between align-items-center">
+                <img class="img-fluid h-25" src="images/company/company-1.png" alt="">
+                <img class="img-fluid h-25" src="images/company/company-2.png" alt="">
+                <img class="img-fluid h-25" src="images/company/company-3.png" alt="">
+                <img class="img-fluid h-25" src="images/company/company-4.png" alt="">
+                <img class="img-fluid h-25" src="images/company/company-5.png" alt="">
+                <img class="img-fluid h-25" src="images/company/company-6.png" alt="">
+
+            </div>
+        </div>
+
         
 
     </div>
