--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
     <!-- custom css link  -->
     <link rel="stylesheet" href="style.css">
+
+    <!-- fontawesome icon cdn  -->
+    <script src="https://kit.fontawesome.com/79bef5a0a3.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -243,7 +246,7 @@
                         </div>
                     </div>
 
-                    <p class="text-center"><button class="btn btn-primary">View All Courses</button></p>
+                    <p class="text-center mb-5"><button class="btn btn-primary">View All Courses</button></p>
 
                 </div>
             </div>
@@ -251,8 +254,7 @@
 
         <!-- register here  -->
 
-        <div
-            class="w-100 bg-primary d-flex justify-content-around align-items-center pt-5 pb-4 mb-5 text-white rounded">
+        <div class="w-100 bg-primary d-flex justify-content-between align-items-center p-5 mb-5 text-white rounded">
             <div>
                 <h3>Ready to join?</h3>
                 <p>It is a long established fact that a reader will be distracted by the <br>
@@ -389,6 +391,22 @@
         
 
     </div>
+
+    <!-- footer start here  -->
+    <footer class="container-fluid footer-height bg-dark text-white text-center  d-flex flex-column align-items-center justify-content-center">
+
+        <div class="w-25">
+            <h1>Ed Tech</h1>
+        <p>Office 41, Zawaya Buildin, Ghala Muscat, Sultanate of Oman</p>
+        <p>Privacy Ploicy | Terms of use</p>
+        </div>
+
+        <div>
+            <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a>  
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
