responsive added for mobile and tab view

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container">
         <!-- navbar here  -->
         <header>
-            <nav class="navbar navbar-expand-lg bg-light py-3 bg-white">
+            <nav class="navbar navbar-expand-lg navbar-expand-xl bg-light py-3 bg-white">
                 <div class="container p-0">
                     <a class="navbar-brand fw-bolder fs-4" href="#">Ed Tech</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -61,7 +61,7 @@
 
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="images/cover/cover-1.png" class="d-block w-100 img-height" alt="...">
+                    <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
                         <h1>Start Your Digital Learning Today</h1>
                         <p>It is a long established fact that a reader will be distracted by the readable
@@ -70,7 +70,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/cover/cover-2.jpg" class="d-block w-100 img-height" alt="...">
+                    <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
                         <h1>Start Your Digital Learning Today</h1>
                         <p>It is a long established fact that a reader will be distracted by the readable
@@ -78,15 +78,16 @@
                         <button class="btn btn-primary">Get Started</button>
                     </div>
                 </div>
+
                 <div class="carousel-item">
-                    <img src="images/cover/cover-3.jpg" class="d-block w-100 img-height" alt="...">
+                    <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
                         <h1>Start Your Digital Learning Today</h1>
                         <p>It is a long established fact that a reader will be distracted by the readable
                             content of a page when looking at its layout.</p>
                         <button class="btn btn-primary">Get Started</button>
                     </div>
-                </div>
+                </div> 
 
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
@@ -113,57 +114,13 @@
 
             <div>
                 <div class="container px-4">
-                    <div class="row gx-2">
+                    <div class="row row-cols-1 row-cols-lg-2 gx-5">
                         <div class="col">
                             <div class="p-3 bg-light">
                                 <div class="card mb-3">
                                     <div class="row g-0">
                                         <div class="col-md-4">
-                                            <img src="images/course/course-1.png" class="img-fluid rounded-start"
-                                                alt="...">
-                                        </div>
-                                        <div class="col-md-8">
-                                            <div class="card-body">
-                                                <h4 class="card-title">UI/UX Design</h4>
-                                                <small class="card-text">Some quick example text to build on the card
-                                                    title
-                                                    and make up the bulk of the card.</small>
-                                                <h4 class="text-primary">Price : 20$</h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="p-3 bg-light">
-                                <div class="card mb-3">
-                                    <div class="row g-0">
-                                        <div class="col-md-4">
-                                            <img src="images/course/course-2.png" class="img-fluid rounded-start"
-                                                alt="...">
-                                        </div>
-                                        <div class="col-md-8">
-                                            <div class="card-body">
-                                                <h5 class="card-title">Javascript Basic to advanced</h5>
-                                                <small class="card-text">Some quick example text to build on the card
-                                                    title
-                                                    and make up the bulk of the card.</small>
-                                                <h4 class="text-primary">Price : 20$</h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row gx-2">
-                        <div class="col">
-                            <div class="p-3 bg-light">
-                                <div class="card mb-3">
-                                    <div class="row g-0">
-                                        <div class="col-md-4">
-                                            <img src="images/course/course-3.png" class="img-fluid rounded-start"
+                                            <img src="images/course/course-1.png" class="img-fluid rounded-start w-100"
                                                 alt="...">
                                         </div>
                                         <div class="col-md-8">
@@ -184,7 +141,7 @@
                                 <div class="card mb-3">
                                     <div class="row g-0">
                                         <div class="col-md-4">
-                                            <img src="images/course/course-4.png" class="img-fluid rounded-start"
+                                            <img src="images/course/course-2.png" class="img-fluid rounded-start w-100"
                                                 alt="...">
                                         </div>
                                         <div class="col-md-8">
@@ -201,13 +158,57 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row gx-2">
+                    <div class="row row-cols-1 row-cols-lg-2 gx-5">
                         <div class="col">
                             <div class="p-3 bg-light">
                                 <div class="card mb-3">
                                     <div class="row g-0">
                                         <div class="col-md-4">
-                                            <img src="images/course/course-5.png" class="img-fluid rounded-start"
+                                            <img src="images/course/course-3.png" class="img-fluid rounded-start w-100"
+                                                alt="...">
+                                        </div>
+                                        <div class="col-md-8">
+                                            <div class="card-body">
+                                                <h4 class="card-title">Fullstack Development</h4>
+                                                <small class="card-text">Some quick example text to build on the card
+                                                    title
+                                                    and make up the bulk of the card.</small>
+                                                <h4 class="text-primary">Price : 20$</h4>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="p-3 bg-light">
+                                <div class="card mb-3">
+                                    <div class="row g-0">
+                                        <div class="col-md-4">
+                                            <img src="images/course/course-4.png" class="img-fluid rounded-start w-100"
+                                                alt="...">
+                                        </div>
+                                        <div class="col-md-8">
+                                            <div class="card-body">
+                                                <h5 class="card-title">Digital Marketing</h5>
+                                                <small class="card-text">Some quick example text to build on the card
+                                                    title
+                                                    and make up the bulk of the card.</small>
+                                                <h4 class="text-primary">Price : 20$</h4>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row row-cols-1 row-cols-lg-2 gx-5">
+                        <div class="col">
+                            <div class="p-3 bg-light">
+                                <div class="card mb-3">
+                                    <div class="row g-0">
+                                        <div class="col-md-4">
+                                            <img src="images/course/course-5.png" class="img-fluid rounded-start w-100"
                                                 alt="...">
                                         </div>
                                         <div class="col-md-8">
@@ -228,7 +229,7 @@
                                 <div class="card mb-3">
                                     <div class="row g-0">
                                         <div class="col-md-4">
-                                            <img src="images/course/course-6.png" class="img-fluid rounded-start"
+                                            <img src="images/course/course-6.png" class="img-fluid rounded-start w-100"
                                                 alt="...">
                                         </div>
                                         <div class="col-md-8">
@@ -254,19 +255,13 @@
 
         <!-- register here  -->
 
-        <div class="w-100 bg-primary d-flex justify-content-between align-items-center p-5 mb-5 text-white rounded">
+        <div class="w-100 bg-primary d-xl-flex  justify-content-between align-items-center p-5 mb-5 text-white rounded text-center text-xl-start">
             <div>
                 <h3>Ready to join?</h3>
                 <p>It is a long established fact that a reader will be distracted by the <br>
                     readable content of a page when looking at its layout.</p>
             </div>
-            <div>
-                <!-- <div class="btn text-primary bg-white ">
-                    
-
-
-                </div> -->
-
+            <div >
                 <!-- Button trigger modal -->
                 <button type="button" class="btn text-primary bg-white" data-bs-toggle="modal"
                     data-bs-target="#exampleModal">
@@ -395,16 +390,16 @@
     <!-- footer start here  -->
     <footer class="container-fluid footer-height bg-dark text-white text-center  d-flex flex-column align-items-center justify-content-center">
 
-        <div class="w-25">
+        <div class="w-100 w-md-50 w-xl-25">
             <h1>Ed Tech</h1>
         <p>Office 41, Zawaya Buildin, Ghala Muscat, Sultanate of Oman</p>
         <p>Privacy Ploicy | Terms of use</p>
         </div>
 
         <div>
-            <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-            <a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a>  
+            <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook d-inline-block mx-2"></i></a>
+            <a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin d-inline-block mx-2"></i></a>
+            <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube d-inline-block mx-2"></i></a>  
         </div>
     </footer>
 
