--- a/index.html
+++ b/index.html
@@ -63,19 +63,19 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
-                            <h1>Start Your Digital Learning Today</h1>
+                        <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100 pt-5">
+                            <h4>Start Learning Today</h4>
                             <p>It is a long established fact that a reader will be distracted by the readable
-                                content of a page when looking at its layout.</p>
+                                content.</p>
                             <button class="btn btn-primary">Get Started</button>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
-                            <h1>Start Your Digital Learning Today</h1>
+                            <h4>Start Learning Today</h4>
                             <p>It is a long established fact that a reader will be distracted by the readable
-                                content of a page when looking at its layout.</p>
+                                content.</p>
                             <button class="btn btn-primary">Get Started</button>
                         </div>
                     </div>
@@ -83,9 +83,9 @@
                     <div class="carousel-item">
                         <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
-                            <h1>Start Your Digital Learning Today</h1>
-                            <p>It is a long established fact that a reader will be distracted by the readable
-                                content of a page when looking at its layout.</p>
+                            <h4>Start Learning Today</h4>
+                            <p class="">It is a long established fact that a reader will be distracted by the readable
+                                content.</p>
                             <button class="btn btn-primary">Get Started</button>
                         </div>
                     </div> 
